force-app/package/core/objects/Data_Cloud_Ingestion_API_Configuration__mdt/Data_Cloud_Ingestion_API_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Data Cloud Ingestion API Configuration</label>
    <pluralLabel>Data Cloud Ingestion API Configurations</pluralLabel>
</CustomObject>