force-app/package/core/objects/Data_Cloud_Ingestion_API_Configuration__mdt/fields/Data_Lake_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Lake_Object_Name__c</fullName>
    <inlineHelpText>Optional name of the Data Lake object that can be used for generating the query</inlineHelpText>
    <label>Data Lake Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>