force-app/package/core/objects/Data_Cloud_Ingestion_API_Configuration__mdt/fields/Ingestion_API_Target_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Ingestion_API_Target_Object_Name__c</fullName>
    <label>Ingestion API Target Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>