force-app/package/core/objects/Data_Cloud_Ingestion_API_Configuration__mdt/fields/Salesforce_Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Named_Credential_Name__c</fullName>
    <description>The name of the named credential that is used to connect to Salesforce. This is used to allow to connect to the data cloud host org.</description>
    <inlineHelpText>The name of the named credential that is used to connect to Salesforce. This is used to allow to connect to the data cloud host org.</inlineHelpText>
    <label>Salesforce Named Credential Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>