force-app/package/core/objects/Data_Cloud_Ingestion_API_Configuration__mdt/fields/sObject_Name__c.field-meta.xml
<CustomField>
    <fullName>sObject_Name__c</fullName>
    <inlineHelpText>The related sObject Name in Salesforce. Used to generate default query result based on the mapping.
Not really mandatory, but advised to populate.</inlineHelpText>
    <label>sObject Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>